어디서 에러가 나는거지...

--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,7 @@
 			<repositories>
 				<repository>
 					<id>bluesky-nexus-docker</id>
-					<url>http://localhost:8082/repository/maven-public/</url>
+					<url>http://nexus.bluesky.local/repository/maven-public/</url>
 					<releases>
 						<enabled>true</enabled>
 					</releases>
@@ -42,11 +42,11 @@
 			<distributionManagement>
 				<repository>
 					<id>bluesky-releases</id>
-					<url>http://localhost:8082/repository/maven-releases/</url>
+					<url>http://nexus.bluesky.local/repository/maven-releases/</url>
 				</repository>
 				<snapshotRepository>
 					<id>bluesky-snapshots</id>
-					<url>http://localhost:8082/repository/maven-snapshots/</url>
+					<url>http://nexus.bluesky.local/repository/maven-snapshots/</url>
 				</snapshotRepository>
 			</distributionManagement>
 		</profile>
