connectioninfo 중간 커밋

--- a/bluesky-boot-autoconfigure/src/test/resources/application.properties
+++ b/bluesky-boot-autoconfigure/src/test/resources/application.properties
@@ -1,7 +1,7 @@
-logging.level.org.springframework=info
-logging.level.io.github.luversof=debug
+#logging.level.org.springframework=info
+#logging.level.io.github.luversof=debug
 
-debug=true
+#debug=true
 
 foo: bucket
 
