--- a/bluesky-boot/pom.xml
+++ b/bluesky-boot/pom.xml
@@ -24,12 +24,6 @@
 		<!-- (e) test -->
 
 		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-jdbc</artifactId>
-			<optional>true</optional>
-		</dependency>
-
-		<dependency>
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-core</artifactId>
 			<optional>true</optional>
@@ -37,8 +31,15 @@
 		<dependency>
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-crypto</artifactId>
+		</dependency>
+		
+		<!-- (s) aop -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-aop</artifactId>
 			<optional>true</optional>
 		</dependency>
+		<!-- (e) aop -->
 
 		<!-- (s) data-jdbc -->
 		<dependency>
