--- a/bluesky-boot/pom.xml
+++ b/bluesky-boot/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>io.github.luversof</groupId>
 		<artifactId>bluesky-boot-parent</artifactId>
-		<version>0.0.1-SNAPSHOT</version>
+		<version>3.1.0-SNAPSHOT</version>
 		<relativePath>../bluesky-boot-parent</relativePath>
 	</parent>
 	<artifactId>bluesky-boot</artifactId>
@@ -65,7 +65,14 @@
 			<scope>test</scope>
 		</dependency>
 		<!-- (e) data-jdbc -->
-
+		
+		<!-- (s) validation -->
+		<dependency>
+			<groupId>jakarta.validation</groupId>
+			<artifactId>jakarta.validation-api</artifactId>
+			<optional>true</optional>
+		</dependency>
+		<!-- (e) validation -->
 
 		<!-- (s) servlet web -->
 		<dependency>
