--- a/bluesky-boot-dependencies/pom.xml
+++ b/bluesky-boot-dependencies/pom.xml
@@ -11,11 +11,10 @@
 	</parent>
 	<properties>
 		<java.version>17</java.version>
-		<spring-boot.version>3.1.1</spring-boot.version>
 		<spring-cloud.version>2022.0.3</spring-cloud.version>
 		<bluesky-boot.version>3.1.0-SNAPSHOT</bluesky-boot.version>
 		<bluesky-boot-crypto.version>3.1.0-SNAPSHOT</bluesky-boot-crypto.version>
-		<bluesky-boot-autoconfigure-devcheck.version>3.1.0-SNAPSHOT</bluesky-boot-autoconfigure-devcheck.version>
+		<bluesky-boot-devcheck.version>3.1.0-SNAPSHOT</bluesky-boot-devcheck.version>
 		<spring-boot-admin-starter.version>3.0.4</spring-boot-admin-starter.version>
 		<springdoc-openapi.version>2.1.0</springdoc-openapi.version>
 		<!-- tag:asciidoctor-properties[] -->
@@ -72,7 +71,7 @@
 			<dependency>
 				<groupId>io.github.luversof</groupId>
 				<artifactId>bluesky-boot-autoconfigure-devcheck</artifactId>
-				<version>${bluesky-boot-autoconfigure-devcheck.version}</version>
+				<version>${bluesky-boot-devcheck.version}</version>
 			</dependency>
 			<!-- (e) bluesky boot -->
 			<!-- (s) spring cloud -->
@@ -123,11 +122,7 @@
 				<version>3.0.0</version>
 			</dependency>
 			<!-- (e) thymeleaf-layout-dialect -->
-			<dependency>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-starter-test</artifactId>
-				<version>${spring-boot.version}</version>
-			</dependency>
+
 			<!-- (s) restdocs-api-spec -->
 			<dependency>
 				<groupId>com.epages</groupId>
