--- a/bluesky-boot-autoconfigure/src/test/resources/mongodb/mongodb-opdev.properties
+++ b/bluesky-boot-autoconfigure/src/test/resources/mongodb/mongodb-opdev.properties
@@ -1,20 +1,20 @@
-bluesky-modules.mongodb.default-mongo-properties.host=localhost
-bluesky-modules.mongodb.default-mongo-properties.port=27017
+bluesky-boot.mongodb.default-mongo-properties.host=localhost
+bluesky-boot.mongodb.default-mongo-properties.port=27017
 
-bluesky-modules.mongodb.default-connection-pool-settings.max-size=30
-bluesky-modules.mongodb.default-connection-pool-settings.min-size=10
-bluesky-modules.mongodb.default-connection-pool-settings.max-wait-time-ms=120000
-bluesky-modules.mongodb.default-connection-pool-settings.max-connection-life-time-ms=0
-bluesky-modules.mongodb.default-connection-pool-settings.max-connection-idle-time-ms=0
+bluesky-boot.mongodb.default-connection-pool-settings.max-size=30
+bluesky-boot.mongodb.default-connection-pool-settings.min-size=10
+bluesky-boot.mongodb.default-connection-pool-settings.max-wait-time-ms=120000
+bluesky-boot.mongodb.default-connection-pool-settings.max-connection-life-time-ms=0
+bluesky-boot.mongodb.default-connection-pool-settings.max-connection-idle-time-ms=0
 
-bluesky-modules.mongodb.default-read-concern-level=local
+bluesky-boot.mongodb.default-read-concern-level=local
 
-bluesky-modules.mongodb.default-write-concern.w=W1
-bluesky-modules.mongodb.default-write-concern.w-timeout-ms=500
-bluesky-modules.mongodb.default-write-concern.journal=false
+bluesky-boot.mongodb.default-write-concern.w=W1
+bluesky-boot.mongodb.default-write-concern.w-timeout-ms=500
+bluesky-boot.mongodb.default-write-concern.journal=false
 
-#bluesky-modules.mongodb.default-properties.uri=mongodb://localhost/test
+#bluesky-boot.mongodb.default-properties.uri=mongodb://localhost/test
 
-#bluesky-modules.mongodb.connection-map.blog.host=localhost
-#bluesky-modules.mongodb.connection-map.blog.database=blog
-#bluesky-modules.mongodb.connection-map.test2.host=192.168.12.3
+#bluesky-boot.mongodb.connection-map.blog.host=localhost
+#bluesky-boot.mongodb.connection-map.blog.database=blog
+#bluesky-boot.mongodb.connection-map.test2.host=192.168.12.3
