bluesky-boot devcheck module 참조 처리 추가

--- a/bluesky-boot-dependencies/pom.xml
+++ b/bluesky-boot-dependencies/pom.xml
@@ -70,6 +70,11 @@
 			</dependency>
 			<dependency>
 				<groupId>io.github.luversof</groupId>
+				<artifactId>bluesky-boot-devcheck</artifactId>
+				<version>${bluesky-boot-devcheck.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>io.github.luversof</groupId>
 				<artifactId>bluesky-boot-autoconfigure-devcheck</artifactId>
 				<version>${bluesky-boot-devcheck.version}</version>
 			</dependency>
