--- a/bluesky-boot/pom.xml
+++ b/bluesky-boot/pom.xml
@@ -114,6 +114,10 @@
 
 		<dependency>
 			<groupId>io.github.luversof</groupId>
+			<artifactId>bluesky-boot-devcheck</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>io.github.luversof</groupId>
 			<artifactId>bluesky-boot-crypto</artifactId>
 		</dependency>
 	</dependencies>
