autoconfiguration 구성 정리 중간 커밋

--- a/bluesky-boot/pom.xml
+++ b/bluesky-boot/pom.xml
@@ -78,6 +78,15 @@
 		</dependency>
 		<!-- (e) data-jdbc -->
 		
+		<!-- (s) data-mongodb -->
+		<dependency>
+			<groupId>org.springframework.data</groupId>
+			<artifactId>spring-data-mongodb</artifactId>
+			<optional>true</optional>
+		</dependency>
+		<!-- (e) data-mongodb -->
+		
+		
 		<!-- (s) validation -->
 		<dependency>
 			<groupId>jakarta.validation</groupId>
