--- a/bluesky-boot/pom.xml
+++ b/bluesky-boot/pom.xml
@@ -120,6 +120,12 @@
 			<optional>true</optional>
 		</dependency>
 		<!-- (e) reactive web -->
+		
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-web</artifactId>
+			<optional>true</optional>
+		</dependency>
 
 		<dependency>
 			<groupId>io.github.luversof</groupId>
