--- a/bluesky-boot-dependencies/pom.xml
+++ b/bluesky-boot-dependencies/pom.xml
@@ -11,7 +11,7 @@
 	</parent>
 	<properties>
 		<java.version>17</java.version>
-		<spring-cloud.version>2022.0.4</spring-cloud.version>
+		<spring-cloud-dependencies.version>2022.0.4</spring-cloud-dependencies.version>
 		<bluesky-boot.version>3.1.0-SNAPSHOT</bluesky-boot.version>
 		<bluesky-boot-crypto.version>3.1.0-SNAPSHOT</bluesky-boot-crypto.version>
 		<bluesky-boot-devcheck.version>3.1.0-SNAPSHOT</bluesky-boot-devcheck.version>
@@ -84,7 +84,7 @@
 			<dependency>
 				<groupId>org.springframework.cloud</groupId>
 				<artifactId>spring-cloud-dependencies</artifactId>
-				<version>${spring-cloud.version}</version>
+				<version>${spring-cloud-dependencies.version}</version>
 				<type>pom</type>
 				<scope>import</scope>
 			</dependency>
