--- a/bluesky-boot-build/pom.xml
+++ b/bluesky-boot-build/pom.xml
@@ -2,18 +2,21 @@
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
+	<groupId>io.github.luversof</groupId>
 	<artifactId>bluesky-boot-build</artifactId>
+	<version>3.1.0-SNAPSHOT</version>
 	<packaging>pom</packaging>
-	<parent>
+	<!--<parent>
 		<groupId>io.github.luversof</groupId>
 		<artifactId>bluesky-boot-dependencies</artifactId>
 		<version>3.1.0-SNAPSHOT</version>
 		<relativePath>../bluesky-boot-dependencies</relativePath>
-	</parent>
+	</parent>-->
 	<properties>
 		<!--<main.basedir>${basedir}/../..</main.basedir>-->
 	</properties>
 	<modules>
+		<module>../bluesky-boot-dependencies</module>
 		<module>bluesky-boot-autoconfigure</module>
 		<module>bluesky-boot-docs</module>
 		<module>bluesky-boot-parent</module>
