--- a/bluesky-boot-build/bluesky-boot-parent/pom.xml
+++ b/bluesky-boot-build/bluesky-boot-parent/pom.xml
@@ -2,14 +2,14 @@
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
+	<artifactId>bluesky-boot-parent</artifactId>
+	<packaging>pom</packaging>
 	<parent>
 		<groupId>io.github.luversof</groupId>
 		<artifactId>bluesky-boot-dependencies</artifactId>
 		<version>3.1.0-SNAPSHOT</version>
-		<relativePath>../../bluesky-boot-dependencies</relativePath>
+		<relativePath>../bluesky-boot-dependencies</relativePath>
 	</parent>
-	<artifactId>bluesky-boot-parent</artifactId>
-	<packaging>pom</packaging>
 	<dependencies>
 		<!-- (s) Annotation processing -->
 		<dependency>
