--- a/bluesky-boot-build/bluesky-boot-dependencies/pom.xml
+++ b/bluesky-boot-build/bluesky-boot-dependencies/pom.xml
@@ -312,7 +312,7 @@
 							<creationTime>USE_CURRENT_TIMESTAMP</creationTime>
 						</container>
 						<from>
-							<image>eclipse-temurin:17-jre-alpine</image>
+							<image>eclipse-temurin:${java.version}-jre-alpine</image>
 						</from>
 						<to>
 							<image>${build.image}/${project.artifactId}</image>
