--- a/bluesky-boot-build/bluesky-boot-docs/pom.xml
+++ b/bluesky-boot-build/bluesky-boot-docs/pom.xml
@@ -10,6 +10,7 @@
 	</parent>
 	<artifactId>bluesky-boot-docs</artifactId>
 	<properties>
+		<refdocs.build.directory>src/main/antora</refdocs.build.directory>
 		<asciidoctor.outputDirectory>src/main/resources/static</asciidoctor.outputDirectory>
 	</properties>
 	<dependencies>
