--- a/bluesky-boot-build/bluesky-boot-docs/src/main/asciidoc/antora.yml
+++ b/bluesky-boot-build/bluesky-boot-docs/src/main/asciidoc/antora.yml
@@ -1,6 +1,6 @@
 name: bluesky-boot
 title: Bluesky Boot
-version: '3.2.0-SNAPSHOT'
+version: 3.2
 start_page: bluesky-boot.adoc
 nav:
 - modules/ROOT/nav.adoc
