properties 호출 오류 수정, properties migrator 테스트 중간 커밋

--- a/bluesky-boot-build/bluesky-boot-dependencies/pom.xml
+++ b/bluesky-boot-build/bluesky-boot-dependencies/pom.xml
@@ -70,6 +70,11 @@
 			</dependency>
 			<dependency>
 				<groupId>io.github.luversof</groupId>
+				<artifactId>bluesky-boot-properties-migrator</artifactId>
+				<version>${bluesky-boot.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>io.github.luversof</groupId>
 				<artifactId>bluesky-boot-test-autoconfigure</artifactId>
 				<version>${bluesky-boot.version}</version>
 			</dependency>
