custom migrationListener 설정 추가

--- a/bluesky-boot-build/bluesky-boot/src/main/resources/META-INF/additional-spring-configuration-metadata.json
+++ b/bluesky-boot-build/bluesky-boot/src/main/resources/META-INF/additional-spring-configuration-metadata.json
@@ -2,10 +2,10 @@
   "groups": [],
   "properties": [
     {
-      "name": "bluesky-boot.core.modules.some.module-info",
+      "name": "bluesky-boot.oldproperty.core.resolve-type",
       "description": "asdfasdfsdf.",
       "deprecation": {
-        "replacement": "bluesky-boot.core.module-info",
+        "replacement": "bluesky-boot.core.resolve-type",
         "level": "error"
       }
     }
