--- a/bluesky-boot-build/bluesky-boot-dependencies/pom.xml
+++ b/bluesky-boot-build/bluesky-boot-dependencies/pom.xml
@@ -4,22 +4,26 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>io.github.luversof</groupId>
 	<artifactId>bluesky-boot-dependencies</artifactId>
-	<version>3.2.0-SNAPSHOT</version>
+	<version>3.3.0-SNAPSHOT</version>
 	<packaging>pom</packaging>
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>3.2.6</version>
+		<version>3.3.1</version>
 		<relativePath/>
 	</parent>
 	<properties>
 		<java.version>21</java.version>
 		<spring-cloud-dependencies.version>2023.0.2</spring-cloud-dependencies.version>
-		<bluesky-boot.version>3.2.0-SNAPSHOT</bluesky-boot.version>
-		<bluesky-boot-crypto.version>3.2.0-SNAPSHOT</bluesky-boot-crypto.version>
-		<bluesky-boot-devcheck.version>3.2.0-SNAPSHOT</bluesky-boot-devcheck.version>
-		<spring-boot-admin-starter.version>3.2.3</spring-boot-admin-starter.version>
+		<bluesky-boot.version>3.3.0-SNAPSHOT</bluesky-boot.version>
+		<bluesky-boot-crypto.version>3.3.0-SNAPSHOT</bluesky-boot-crypto.version>
+		<bluesky-boot-devcheck.version>3.3.0-SNAPSHOT</bluesky-boot-devcheck.version>
+		<spring-boot-admin-starter.version>3.3.2</spring-boot-admin-starter.version>
 		<springdoc-openapi.version>2.5.0</springdoc-openapi.version>
+		
+		<jsqlparser.version>4.9</jsqlparser.version>
+		<logback-access.version>2.0.1</logback-access.version>
+		
 		<!-- tag:asciidoctor-properties[] -->
 		<asciidoctor-maven-plugin.version>2.2.6</asciidoctor-maven-plugin.version>
 		<refdocs.build.directory>${project.build.directory}/refdocs/</refdocs.build.directory>
@@ -34,7 +38,7 @@
 		<restdocs-spec-maven-plugin.version>0.23</restdocs-spec-maven-plugin.version>
 		<!-- end:asciidoctor-properties[] -->
 		<jacoco-maven-plugin.version>0.8.12</jacoco-maven-plugin.version>
-		<jib-maven-plugin.version>3.4.2</jib-maven-plugin.version>
+		<jib-maven-plugin.version>3.4.3</jib-maven-plugin.version>
 		<properties-maven-plugin.version>1.2.1</properties-maven-plugin.version>
 		<filecopy-maven-plugin.version>1.0.2</filecopy-maven-plugin.version>
 		
@@ -45,9 +49,9 @@
 		<!-- (e) build properties -->
 		
 		<!-- (s) ossrh -->
-		<maven-gpg-plugin.version>3.2.3</maven-gpg-plugin.version>
-		<nexus-staging-maven-plugin.version>1.6.13</nexus-staging-maven-plugin.version>
-		<maven-release-plugin.version>3.0.1</maven-release-plugin.version>
+		<maven-gpg-plugin.version>3.2.4</maven-gpg-plugin.version>
+		<nexus-staging-maven-plugin.version>1.7.0</nexus-staging-maven-plugin.version>
+		<maven-release-plugin.version>3.1.0</maven-release-plugin.version>
 		<!-- (e) ossrh -->
 	</properties>
 	<dependencyManagement>
@@ -150,6 +154,20 @@
 				<version>${restdocs-api-spec.version}</version>
 			</dependency>
 			<!-- (e) restdocs-api-spec -->
+			
+			<!-- (s) logback access-->
+			<dependency> 
+				<groupId>ch.qos.logback.access</groupId>
+				<artifactId>tomcat</artifactId>
+				<version>${logback-access.version}</version>      
+			</dependency>
+			<!-- (e) logback access-->
+			
+			<dependency>
+				<groupId>com.github.jsqlparser</groupId>
+				<artifactId>jsqlparser</artifactId>
+				<version>${jsqlparser.version}</version>
+			</dependency>
 		</dependencies>
 	</dependencyManagement>
 	<build>
@@ -363,6 +381,9 @@
 		</pluginManagement>
 	</build>
 	<profiles>
+		<profile>
+			<id>local</id>
+		</profile>
 		<profile>
 			<id>sonarqube</id>
 			<activation>
