--- a/bluesky-boot-build/bluesky-boot/pom.xml
+++ b/bluesky-boot-build/bluesky-boot/pom.xml
@@ -10,6 +10,13 @@
 	</parent>
 	<artifactId>bluesky-boot</artifactId>
 	<dependencies>
+	
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<optional>true</optional>
+		</dependency>
+	
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-configuration-processor</artifactId>
