--- a/bluesky-boot-build/bluesky-boot-dependencies/pom.xml
+++ b/bluesky-boot-build/bluesky-boot-dependencies/pom.xml
@@ -9,7 +9,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>3.3.4</version>
+		<version>3.3.5</version>
 		<relativePath/>
 	</parent>
 	<properties>
@@ -18,7 +18,8 @@
 		<bluesky-boot.version>3.3.0-SNAPSHOT</bluesky-boot.version>
 		<bluesky-boot-crypto.version>3.3.0-SNAPSHOT</bluesky-boot-crypto.version>
 		<bluesky-boot-devcheck.version>3.3.0-SNAPSHOT</bluesky-boot-devcheck.version>
-		<spring-boot-admin-starter.version>3.3.3</spring-boot-admin-starter.version>
+		<spring-boot-admin-starter.version>3.3.4</spring-boot-admin-starter.version>
+		<mybatis-spring-boot-starter.version>3.0.3</mybatis-spring-boot-starter.version>
 		<springdoc-openapi.version>2.6.0</springdoc-openapi.version>
 		
 		<jsqlparser.version>5.0</jsqlparser.version>
@@ -33,12 +34,12 @@
 		<asciidoctor.preserveDirectories>true</asciidoctor.preserveDirectories>
 		<asciidoctor.doctype>book</asciidoctor.doctype>
 		<spring-asciidoctor-backends.version>0.0.7</spring-asciidoctor-backends.version>
-		<asciidoctorj-diagram.version>2.3.0</asciidoctorj-diagram.version>
-		<restdocs-api-spec.version>0.19.2</restdocs-api-spec.version>
+		<asciidoctorj-diagram.version>2.3.1</asciidoctorj-diagram.version>
+		<restdocs-api-spec.version>0.19.4</restdocs-api-spec.version>
 		<restdocs-spec-maven-plugin.version>0.23</restdocs-spec-maven-plugin.version>
 		<!-- end:asciidoctor-properties[] -->
 		<jacoco-maven-plugin.version>0.8.12</jacoco-maven-plugin.version>
-		<jib-maven-plugin.version>3.4.3</jib-maven-plugin.version>
+		<jib-maven-plugin.version>3.4.4</jib-maven-plugin.version>
 		<properties-maven-plugin.version>1.2.1</properties-maven-plugin.version>
 		<filecopy-maven-plugin.version>1.0.2</filecopy-maven-plugin.version>
 		
@@ -49,7 +50,7 @@
 		<!-- (e) build properties -->
 		
 		<!-- (s) ossrh -->
-		<maven-gpg-plugin.version>3.2.6</maven-gpg-plugin.version>
+		<maven-gpg-plugin.version>3.2.7</maven-gpg-plugin.version>
 		<nexus-staging-maven-plugin.version>1.7.0</nexus-staging-maven-plugin.version>
 		<maven-release-plugin.version>3.1.1</maven-release-plugin.version>
 		<!-- (e) ossrh -->
@@ -112,7 +113,7 @@
 			<dependency>
 				<groupId>org.mybatis.spring.boot</groupId>
 				<artifactId>mybatis-spring-boot-starter</artifactId>
-				<version>3.0.3</version>
+				<version>${mybatis-spring-boot-starter.version}</version>
 			</dependency>
 			<!-- (e) mybatis -->
 			<!-- (s) boot-admin -->
@@ -139,13 +140,6 @@
 				<version>${springdoc-openapi.version}</version>
 			</dependency>
 			<!-- (e) springdoc-openapi -->
-			<!-- (s) thymeleaf-layout-dialect -->
-			<dependency>
-				<groupId>com.github.zhanhb</groupId>
-				<artifactId>thymeleaf-layout-dialect</artifactId>
-				<version>3.2.0</version>
-			</dependency>
-			<!-- (e) thymeleaf-layout-dialect -->
 
 			<!-- (s) restdocs-api-spec -->
 			<dependency>
