BlueskyRefreshProperties 설정 추가

--- a/bluesky-boot-build/bluesky-boot-autoconfigure/pom.xml
+++ b/bluesky-boot-build/bluesky-boot-autoconfigure/pom.xml
@@ -194,5 +194,13 @@
 			<artifactId>jsqlparser</artifactId>
 			<optional>true</optional>
 		</dependency>
+		
+		<!-- (s) spring cloud context -->
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-context</artifactId>
+			<optional>true</optional>
+		</dependency>
+		<!-- (e) spring cloud context -->
 	</dependencies>
 </project>
