--- a/bluesky-boot-build/bluesky-boot-autoconfigure/pom.xml
+++ b/bluesky-boot-build/bluesky-boot-autoconfigure/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<groupId>io.github.luversof</groupId>
 		<artifactId>bluesky-boot-parent</artifactId>
-		<version>3.3.0-SNAPSHOT</version>
+		<version>3.4.0-SNAPSHOT</version>
 		<relativePath>../bluesky-boot-parent</relativePath>
 	</parent>
 	<artifactId>bluesky-boot-autoconfigure</artifactId>
@@ -185,7 +185,7 @@
 
 		<dependency>
 			<groupId>ch.qos.logback.access</groupId>
-			<artifactId>tomcat</artifactId>
+			<artifactId>logback-access-tomcat</artifactId>
 			<optional>true</optional>
 		</dependency>
 		
