--- a/bluesky-boot-build/bluesky-boot-dependencies/pom.xml
+++ b/bluesky-boot-build/bluesky-boot-dependencies/pom.xml
@@ -505,7 +505,7 @@
 								<path>
 									<groupId>org.mapstruct</groupId>
 									<artifactId>mapstruct-processor</artifactId>
-									<version>1.5.5.Final</version>
+									<version>1.6.2</version>
 								</path>
 								<path>
 									<groupId>org.projectlombok</groupId>
