--- a/bluesky-boot-build/bluesky-boot-dependencies/pom.xml
+++ b/bluesky-boot-build/bluesky-boot-dependencies/pom.xml
@@ -9,7 +9,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>3.4.0</version>
+		<version>3.4.1</version>
 		<relativePath/>
 	</parent>
 	<properties>
@@ -26,7 +26,7 @@
 		<logback-access.version>2.0.4</logback-access.version>
 		
 		<!-- tag:asciidoctor-properties[] -->
-		<asciidoctor-maven-plugin.version>3.3.1</asciidoctor-maven-plugin.version>
+		<asciidoctor-maven-plugin.version>3.1.1</asciidoctor-maven-plugin.version>
 		<refdocs.build.directory>${project.build.directory}/refdocs/</refdocs.build.directory>
 		<asciidoctor.backend>spring-html</asciidoctor.backend>
 		<asciidoctor.sourceDirectory>${refdocs.build.directory}</asciidoctor.sourceDirectory>
@@ -501,11 +501,14 @@
 						<groupId>org.apache.maven.plugins</groupId>
 						<artifactId>maven-compiler-plugin</artifactId>
 						<configuration>
+							<!--<annotationProcessors>
+								<annotationProcessor>lombok.launch.AnnotationProcessorHider$AnnotationProcessor</annotationProcessor>
+							</annotationProcessors>-->
 							<annotationProcessorPaths>
 								<path>
 									<groupId>org.mapstruct</groupId>
 									<artifactId>mapstruct-processor</artifactId>
-									<version>1.6.2</version>
+									<version>1.6.3</version>
 								</path>
 								<path>
 									<groupId>org.projectlombok</groupId>
