--- a/bluesky-boot-build/bluesky-boot-dependencies/pom.xml
+++ b/bluesky-boot-build/bluesky-boot-dependencies/pom.xml
@@ -20,10 +20,10 @@
 		<bluesky-boot-devcheck.version>3.4.0-SNAPSHOT</bluesky-boot-devcheck.version>
 		<spring-boot-admin-starter.version>3.4.1</spring-boot-admin-starter.version>
 		<mybatis-spring-boot-starter.version>3.0.4</mybatis-spring-boot-starter.version>
-		<springdoc-openapi.version>2.8.4</springdoc-openapi.version>
+		<springdoc-openapi.version>2.8.5</springdoc-openapi.version>
 		
 		<jsqlparser.version>5.1</jsqlparser.version>
-		<logback-access.version>2.0.6</logback-access.version>
+		<logback-access-tomcat.version>2.0.6</logback-access-tomcat.version>
 		
 		<!-- tag:asciidoctor-properties[] -->
 		<asciidoctor-maven-plugin.version>3.1.1</asciidoctor-maven-plugin.version>
@@ -153,7 +153,7 @@
 			<dependency> 
 				<groupId>ch.qos.logback.access</groupId>
 				<artifactId>logback-access-tomcat</artifactId>
-				<version>${logback-access.version}</version>      
+				<version>${logback-access-tomcat.version}</version>      
 			</dependency>
 			<!-- (e) logback access-->
 			
