--- a/bluesky-boot-build/pom.xml
+++ b/bluesky-boot-build/pom.xml
@@ -18,5 +18,6 @@
 		<module>bluesky-boot</module>
 		<module>bluesky-boot-test-autoconfigure</module>
 		<module>bluesky-boot-properties-migrator</module>
+		<module>bluesky-boot-test</module>
 	</modules>
 </project>
