--- a/bluesky-boot-build/bluesky-boot-dependencies/pom.xml
+++ b/bluesky-boot-build/bluesky-boot-dependencies/pom.xml
@@ -65,6 +65,11 @@
 			</dependency>
 			<dependency>
 				<groupId>io.github.luversof</groupId>
+				<artifactId>bluesky-boot-test</artifactId>
+				<version>${bluesky-boot.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>io.github.luversof</groupId>
 				<artifactId>bluesky-boot-autoconfigure</artifactId>
 				<version>${bluesky-boot.version}</version>
 			</dependency>
