Add configuration options and improve documentation comments
- Add `-Xdoclint:missing` option to Maven jar plugin
- Remove redundant comments in `BlueskyContextHolder`
- Add reference to `SecurityContextHolder` in `BlueskyContextHolder`
- Improve Javadoc comments in various classes
- Add missing Javadoc comments for methods
- Fix formatting issues in multiple files

--- a/bluesky-boot-build/bluesky-boot-dependencies/pom.xml
+++ b/bluesky-boot-build/bluesky-boot-dependencies/pom.xml
@@ -549,6 +549,11 @@
 								<goals>
 									<goal>jar</goal>
 								</goals>
+								<configuration>
+									<additionalJOptions>
+										<arg>-Xdoclint:missing</arg>
+									</additionalJOptions>
+								</configuration>
 							</execution>
 						</executions>
 					</plugin>
