Refactor and streamline connection info handling and update dependencies
- Replaced `ConnectionInfoLoaderProperties` with
`ConnectionInfoProperties`
- Added optional dependencies for devcheck and connectioninfo-jdbc
- Simplified `ConnectionInfoRegistry` and `routingDataSource` logic
- Removed MariaDB and SQLServer-specific configurations and loaders
- Deprecated `MongoClientConnectionInfoCollectorDecorator` class
- Deleted outdated test cases and deprecated classes like
`ConnectionInfoCollector`
- Updated `LazyLoadRoutingDataSource` to use new connection info API
- Deprecated decryption-related classes and updated `spring.factories`
- Cleaned up unused imports and redundant code across the project

--- a/bluesky-boot-build/bluesky-boot-autoconfigure/pom.xml
+++ b/bluesky-boot-build/bluesky-boot-autoconfigure/pom.xml
@@ -17,10 +17,22 @@
 			<groupId>io.github.luversof</groupId>
 			<artifactId>bluesky-boot</artifactId>
 		</dependency>
+		
+		<!-- (s) bluesky boot devcheck -->
 		<dependency>
 			<groupId>io.github.luversof</groupId>
 			<artifactId>bluesky-boot-autoconfigure-devcheck</artifactId>
+			<optional>true</optional>
 		</dependency>
+		<!-- (e) bluesky boot devcheck -->
+		
+		<!-- (s) bluesky boot connectioninfo -->
+		<dependency>
+			<groupId>io.github.luversof</groupId>
+			<artifactId>bluesky-boot-autoconfigure-connectioninfo-jdbc</artifactId>
+			<optional>true</optional>
+		</dependency>
+		<!-- (e) bluesky boot connectioninfo -->
 
 		<!-- (s) test -->
 		<dependency>
