--- a/bluesky-boot-build/bluesky-boot-test/pom.xml
+++ b/bluesky-boot-build/bluesky-boot-test/pom.xml
@@ -29,5 +29,11 @@
 			<artifactId>bluesky-boot</artifactId>
 			<optional>true</optional>
 		</dependency>
+		
+		<dependency>
+			<groupId>io.github.luversof</groupId>
+			<artifactId>bluesky-boot-crypto</artifactId>
+			<optional>true</optional>
+		</dependency>
 	</dependencies>
 </project>
