- Added `getPropertyMapperConsumer` for reusable property mapping - Replaced inline `PropertyMapper` usage with BiConsumer-based methods - Introduced Lombok dependency in `pom.xml` for code simplification - Added builder classes for `LocaleContextResolver` and `LocaleResolveHandler` - Updated `ModuleInfo` to include new builder methods - Simplified `load` methods across multiple property classes - Removed redundant `PropertyMapper` declarations and annotations - Removed unused imports for cleaner codebase - Enhanced modularity and reusability of property mapping logic

--- a/bluesky-boot-build/bluesky-boot-dependencies/pom.xml
+++ b/bluesky-boot-build/bluesky-boot-dependencies/pom.xml
@@ -54,7 +54,18 @@
 		<nexus-staging-maven-plugin.version>1.7.0</nexus-staging-maven-plugin.version>
 		<maven-release-plugin.version>3.1.1</maven-release-plugin.version>
 		<!-- (e) ossrh -->
+		
+		<!-- (s) temp -->
+		<lombok.version>1.18.38</lombok.version>
+		<!-- (e) temp -->
 	</properties>
+	<dependencies>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <scope>provided</scope>
+        </dependency>
+    </dependencies>
 	<dependencyManagement>
 		<dependencies>
 			<!-- (s) bluesky boot -->
