--- a/bluesky-boot-build/bluesky-boot-dependencies/pom.xml
+++ b/bluesky-boot-build/bluesky-boot-dependencies/pom.xml
@@ -110,6 +110,16 @@
 				<artifactId>bluesky-boot-autoconfigure-connectioninfo-jdbc</artifactId>
 				<version>${bluesky-boot-connectioninfo.version}</version>
 			</dependency>
+			<dependency>
+				<groupId>io.github.luversof</groupId>
+				<artifactId>bluesky-boot-connectioninfo-mongodb</artifactId>
+				<version>${bluesky-boot-connectioninfo.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>io.github.luversof</groupId>
+				<artifactId>bluesky-boot-autoconfigure-connectioninfo-mongodb</artifactId>
+				<version>${bluesky-boot-connectioninfo.version}</version>
+			</dependency>
 			<!-- (e) bluesky boot connectioninfo -->
 			
 			<!-- (s) bluesky boot crypto -->
