--- a/bluesky-boot-build/bluesky-boot-dependencies/pom.xml
+++ b/bluesky-boot-build/bluesky-boot-dependencies/pom.xml
@@ -25,6 +25,7 @@
 		
 		<jsqlparser.version>5.3</jsqlparser.version>
 		<logback-access-tomcat.version>2.0.6</logback-access-tomcat.version>
+		<uuid-creator.version>6.1.1</uuid-creator.version>
 		
 		<!-- tag:asciidoctor-properties[] -->
 		<asciidoctor-maven-plugin.version>3.2.0</asciidoctor-maven-plugin.version>
@@ -205,6 +206,12 @@
 				<groupId>com.github.jsqlparser</groupId>
 				<artifactId>jsqlparser</artifactId>
 				<version>${jsqlparser.version}</version>
+			</dependency>
+			
+			<dependency>
+				<groupId>com.github.f4b6a3</groupId>
+				<artifactId>uuid-creator</artifactId>
+				<version>${uuid-creator.version}</version>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
