--- a/bluesky-boot-build/bluesky-boot/pom.xml
+++ b/bluesky-boot-build/bluesky-boot/pom.xml
@@ -16,6 +16,12 @@
 			<artifactId>jackson-databind</artifactId>
 			<optional>true</optional>
 		</dependency>
+		
+		<dependency>
+			<groupId>com.github.f4b6a3</groupId>
+			<artifactId>uuid-creator</artifactId>
+			<optional>true</optional>
+		</dependency>
 	
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
